cssBayan/style.css
html {
    margin: 0;
    padding: 0;
    font-size: 10px;
}
.wrapper {
    max-width: 1920px;
}


.accordion{
    max-width: 60rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    border-radius: 15px;
    overflow: hidden;
    background-color: rgb(154, 212, 145);
    margin: auto;
}

.accordion:hover .icon {
    display: inline-block;
} 

.accordion__label, .accordion__content{
    padding: 14px 20px;
}

.accordion__label{
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    font-weight: bold;
    cursor: pointer;
    transition: background-color 0.1s;

}

.accordion__label:hover{
    background-color: rgba(0, 0, 0, 0.1);
}

.accordion__label:hover .icon {
    display: inline-block;
    background: url(assets/icons/cross.png);
    width: 32px;
    height: 32px;
}

.accordion__label:hover + .accordion__content {
    display: block;
}

.accordion__content{
    background: white;
    line-height: 1.6;
    font-size: 0.85em;
    display: none;
}

.accordion__content p {
    text-align: center;
    cursor: pointer;

}
.accordion__input{
    display: none;
}

.accordion__input:checked ~ .accordion__content{
    display: block;
    animation: fadeIn 2s;
}

.accordion__input:checked ~ * .icon {
    display: inline-block;
    background: url(assets/icons/cross.png);
        
}

.accordion__input:checked +.accordion__label {
    background: rgb(68, 168, 65);
}

.icon {
    display: none;
    background: url(assets/icons/plus.png);
    width: 32px;
    height: 32px;
    transition: 0.5s ease;

}

.title {
    font-size: 2.0rem;
}


@keyframes fadeIn {
    from { opacity: 0; }
      to { opacity: 1; }
}

